feat: setup webpacker - esbuild - typescript - graphql - appollo client - devise template

--- a/app/assets/stylesheets/devise.scss
+++ b/app/assets/stylesheets/devise.scss
@@ -1,209 +1,15 @@
-html {
-  min-height: 100%;
+.divider:after,
+.divider:before {
+  content: "";
+  flex: 1;
+  height: 1px;
+  background: #eee;
 }
-
-body {
-  background: linear-gradient(#fff, #f7f7f7);
-  background-repeat: no-repeat;
-  background-size: cover;
-  font-family: 'Roboto', sans-serif;
-  margin: 0;
+.h-custom {
+  height: calc(100% - 73px);
 }
-
-a {
-  color: #1b90b5;
-
-  &:hover {
-    color: #1b90b5;
+@media (max-width: 450px) {
+  .h-custom {
+    height: 100%;
   }
-}
-
-.card {
-  max-width: 320px;
-  position: relative;
-  margin: auto;
-  top: 25vh;
-  background: #FFF;
-  opacity: 0.8;
-  box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 3px 1px -2px rgba(0, 0, 0, 0.12);
-  border-radius: 5px;
-  padding: 50px 70px;
-
-  .card-header {
-    text-align: center;
-
-    h2 {
-      margin-top: 0;
-      color: #000000de;
-      font-size: 1.25rem;
-      font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-      font-weight: 500;
-      line-height: 1.6;
-      letter-spacing: 0.0075em;
-    }
-  }
-
-  .card-content {
-    form {
-      &#new_user {
-        max-width: initial;
-      }
-
-      label {
-        color: #0000008a;
-      }
-
-      .field {
-        margin: 40px 0;
-
-        input[type=email], input[type=password] {
-          margin-top: 6px;
-          width: 100%;
-          font-size: 1.1em;
-          border: 0;
-          border-bottom: 2px solid #cccccc;
-          font-family: 'Roboto', sans-serif;
-          outline: 0;
-          transition: all .25s ease;
-
-          &:hover {
-            border-color: #000;
-          }
-
-          &:focus {
-            border-color: #2196f3;
-          }
-        }
-
-        & em{
-          color: #0000008a;
-          font-size: 0.8em;
-        }
-
-        &.add-margin-bottom {
-          margin-bottom: 25px;
-        }
-
-        &:focus {
-          outline: 0;
-        }
-      }
-
-      input[type=submit] {
-        &.primary {
-          color: #fff;
-          background-color: #05293f;
-        }
-
-        padding: 13px 44px;
-        margin: 0 auto;
-        display: block;
-        font-size: 1.1em;
-        box-sizing: border-box;
-        min-height: 36px;
-        transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms, box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
-        line-height: 1.4em;
-        font-family: "Roboto", "Helvetica", "Arial", sans-serif;
-        font-weight: 500;
-        border-radius: 24px;
-        cursor: pointer;
-        border: 0;
-        outline: none;
-        position: relative;
-        user-select: none;
-        text-decoration: none;
-        -webkit-appearance: none;
-        -webkit-tap-highlight-color: transparent;
-        box-shadow: 0px 1px 5px 0px rgba(0, 0, 0, 0.2), 0px 2px 2px 0px rgba(0, 0, 0, 0.14), 0px 3px 1px -2px rgba(0, 0, 0, 0.12);
-
-        &:hover {
-          background-color: #1682a9;
-        }
-      }
-
-      .alert {
-        color: #ffffff;
-        padding: 15px;
-        margin-bottom: 10px;
-        background: #1682a9;
-        border-radius: 3px;
-
-        h4 {
-          margin-top: 0;
-        }
-
-        ul {
-          margin-bottom: 0;
-          padding-left: 0;
-          list-style-type: none;
-        }
-
-        &.alert-danger {
-          background: #F44336;
-          border-left: 10px solid #d62e21;
-        }
-      }
-    }
-  }
-
-  .card-footer {
-    margin-top: 30px;
-    text-align: center;
-  }
-}
-
-.logo {
-  max-width: 225px;
-  height: auto;
-  margin: 4rem auto 4rem auto;
-  display: block;
-}
-
-.language-switcher {
-  display: none; // fr seulement en attendant le multi-langue
-  position: absolute;
-  top: 0;
-  right: 1rem;
-  padding: 20px;
-  color: #848484;
-  z-index: 1;
-  text-decoration: none;
-
-  &:hover {
-    color: #848484;
-  }
-}
-
-.actions {
-  margin: 2rem 0 1rem 0;
-}
-
-.devise-links {
-  margin-bottom: 5rem;
-  text-align: center;
-
-  p.btn-link-container {
-    margin-top: 0.5rem;
-    margin-bottom: 0;
-  }
-}
-
-form#new_user {
-  max-width: 350px;
-  margin: 0 auto;
-}
-
-section {
-  height: 100%;
-  min-height: 100vh;
-  //margin-bottom: -30px;
-
-  //&#logIn {
-  //  &.loginPict {
-  //    background-image: image-url("bkg_login.jpg");
-  //    background-repeat: no-repeat;
-  //    background-size: cover;
-  //    background-position: top left;
-  //  }
-  //}
 }
