--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,39 +1,92 @@
-<div class="card">
+<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
+  <section class="vh-100">
+    <div class="container-fluid h-custom">
+      <div class="row d-flex justify-content-center align-items-center h-100">
+        <div class="col-md-9 col-lg-6 col-xl-5">
+          <img src="https://mdbootstrap.com/img/Photos/new-templates/bootstrap-login-form/draw2.png" class="img-fluid"
+               alt="Sample image">
+        </div>
+        <div class="col-md-8 col-lg-6 col-xl-4 offset-xl-1">
+          <div class="d-flex flex-row align-items-center justify-content-center justify-content-lg-start">
+            <p class="lead fw-normal mb-0 me-3"><%= t('devise.registrations.new.sign_up') %></p>
+          </div>
 
-  <div class="card-header">
-    <h2><%= t('devise.registrations.new.sign_up') %></h2>
-  </div>
+          <div class="divider d-flex align-items-center my-4">
+            <p class="text-center fw-bold mx-3 mb-0"></p>
+          </div>
 
-  <div class="card-content">
+          <%= render "devise/shared/error_messages", resource: resource %>
 
-    <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-      <%= render "devise/shared/error_messages", resource: resource %>
+          <!-- email input -->
+          <div class="form-outline mb-4">
+            <%= f.email_field :email, autofocus: true, class: "form-control form-control-lg", id: "formEmail", autocomplete: "email" %>
+            <label class="form-label" for="email"><%= f.label :email %></label>
+          </div>
 
-      <div class="field">
-        <%= f.label :email %><br/>
-        <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+          <!-- password input -->
+          <% if @minimum_password_length %>
+            <div>(<%= @minimum_password_length %> <%= t('password.minimum') %>)</div>
+          <% end %>
+
+          <div class="form-outline mb-4">
+            <%= f.password_field :password, class: "form-control form-control-lg", id: "formPassword", autocomplete: "new-password" %>
+            <label class="form-label" for="password"><%= f.label :password %></label>
+          </div>
+
+          <div class="form-outline mb-4">
+            <%= f.password_field :password_confirmation, class: "form-control form-control-lg", id: "formConfirmPassword", autocomplete: "new-password" %>
+            <label class="form-label" for="confirm_password"><%= f.label :password_confirmation %></label>
+          </div>
+
+          <div class="text-center text-lg-start mt-4 pt-2">
+            <%= f.submit t('devise.registrations.new.sign_up'), class: "btn btn-primary btn-lg", style: "padding-left: 2.5rem; padding-right: 2.5rem;" %>
+          </div>
+
+
+          <p class="small fw-bold mt-2 pt-1 mb-0">Vous avez déjà un compte?
+            <%= link_to t("devise.shared.links.log_in"), new_session_path(resource_name), class: 'link-danger' %><br/>
+            <br/>
+          </p>
+
+        </div>
       </div>
-
-      <div class="field">
-        <%= f.label :password %>
-        <% if @minimum_password_length %>
-          <em>(<%= @minimum_password_length %> characters minimum)</em>
-        <% end %><br/>
-        <%= f.password_field :password, autocomplete: "new-password" %>
-      </div>
-
-      <div class="field">
-        <%= f.label :password_confirmation %><br/>
-        <%= f.password_field :password_confirmation, autocomplete: "new-password" %>
-      </div>
-
-      <div class="actions">
-        <%= f.submit t('devise.registrations.new.sign_up_short'), class: "primary" %>
-      </div>
-    <% end %>
-
-    <div class="card-footer">
-      <%= render "devise/shared/links" %>
     </div>
-  </div>
-</div>
+    <div class="d-flex flex-column flex-md-row text-center text-md-start justify-content-between py-4 px-4 px-xl-5 bg-primary">
+      <!-- Copyright -->
+      <div class="text-white mb-3 mb-md-0">
+        BoilerPlate © 2021. Tous droits sont réservés.
+      </div>
+      <!-- Copyright -->
+
+      <!-- Right -->
+      <div>
+        <a href="#!" class="text-white me-4">
+          <i class="fab fa-facebook-f"></i>
+        </a>
+        <a href="#!" class="text-white me-4">
+          <i class="fab fa-twitter"></i>
+        </a>
+        <a href="#!" class="text-white me-4">
+          <i class="fab fa-google"></i>
+        </a>
+        <a href="#!" class="text-white">
+          <i class="fab fa-linkedin-in"></i>
+        </a>
+      </div>
+      <!-- Right -->
+    </div>
+  </section>
+<% end %>
+
+<script>
+  document.querySelectorAll('.form-outline')
+    .forEach((formOutline) => {
+      new mdb.Input(formOutline).init();
+      console.log("yes")
+    });
+</script>
+
+
+
+
+
