--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -32,6 +32,12 @@
     type="text/javascript"
     src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/3.10.0/mdb.min.js"
   ></script>
+
+  <!-- MUI -->
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
 </head>
 
 <!--<input autofocus="autofocus" class="form-control form-control-lg" id="formEmail" autocomplete="email" type="email" value="" name="user[email]">-->
