--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,2 +1,1 @@
-<%= stylesheet_pack_tag 'front-end-react/assets/stylesheets/App.scss' %>
-<%= javascript_pack_tag 'App' %>
+<%= javascript_pack_tag 'Index' %>
